create font view

--- a/src/app/list-font-item/list-font-item.component.html
+++ b/src/app/list-font-item/list-font-item.component.html
@@ -1,1 +1,9 @@
-<h2>{{font.title}}</h2>
+<div class="list-font-item">
+    <h2 class="title">{{font.title}}</h2>
+<p>{{font.fontFamily}}</p>
+<ul class="commands">
+    <li>CSS</li>
+    <li>EDIT</li>
+    <li>DELETE</li>
+</ul>
+</div>
