--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-list-fonts>
-  <app-list-font-item *ngFor="let f of saveFonts" [font]="f" ></app-list-font-item>
-</app-list-fonts>
+<router-outlet></router-outlet>
 
