--- a/src/app/list-font-item/list-font-item.component.html
+++ b/src/app/list-font-item/list-font-item.component.html
@@ -3,7 +3,7 @@
 <p>{{font.fontFamily}}</p>
 <ul class="commands">
     <li>CSS</li>
-    <li>EDIT</li>
+    <li routerLink="/font/{{font.title}}" >EDIT</li>
     <li>DELETE</li>
 </ul>
 </div>
