--- a/src/app/font/font.component.html
+++ b/src/app/font/font.component.html
@@ -22,12 +22,12 @@
     <div class="row">
       <div class="col col-third">
         <label for="size">size</label>
-        <input id="size" [(ngModel)]="font.fontSize" type="number" min="1" max="100">
+        <input id="size" [(ngModel)]="font.fontSize" type="number" min="11" max="100">
 
       </div>
       <div class="col col-third">
         <label for="letterSpacing">Letter Spacing</label>
-        <input id="letterSpacing" [(ngModel)]='font.letterSpacing' type="number" min="1" max="100" step="1">
+        <input id="letterSpacing" [(ngModel)]='font.letterSpacing' type="number" min="-6" max="100" step="1">
 
       </div>
       <div class="col col-third">
@@ -38,14 +38,19 @@
       </div>
     </div>
 
-    <select [(ngModel)]="previewType">
-      <option value="arabic">Arabic</option>
-      <option value="latin">Latin</option>
-      <option value="char">char</option>
+    <div class="row">
+      <label for="previewType">Preview</label>
+    <select id="previewType" [(ngModel)]="previewType">
+      <option value="0">Arabic</option>
+      <option value="1">Latin</option>
+      <option value="2">char</option>
     </select>
+    </div>
+    
     <div class="txt-preview" [style.fontSize]='font.fontSize+"px"' [style.fontFamily]='font.fontFamily' [style.fontWeight]='font.fontWeight'
       [style.lineHeight]='font.lineHeight' [style.letterSpacing]='font.letterSpacing+"px"'>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem pariatur ratione iure!.
+      {{previewText[previewType]}}
+      <!-- Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem pariatur ratione iure!. -->
     </div>
 
 
