--- a/src/styles.scss
+++ b/src/styles.scss
@@ -159,3 +159,57 @@ label{
     margin: 16px 0 ;
     border: 0 ;
 }
+
+#color-picker {
+  .modalBg{
+    position: fixed ;
+    width: 100% ;
+    height: 100%;
+    top: 0 ;
+    bottom: 0 ;
+    right: 0 ;
+    left: 0;
+    background-color: hsla(0, 0%, 0%, 0.85) ;
+    z-index: 1;
+  }
+  .swatch{
+    z-index: 2;
+    background: $clr-white1 ;
+    padding: 0 20px; 
+    border-radius: 2px ;
+    position: fixed ;
+    top: 0 ;
+    bottom: 0 ;
+    right: 0 ;
+    left: 0;
+    width: 90%;
+    height: 90%;
+    max-width: 400px;
+    max-height: 500px ;
+    margin: auto ;
+
+  }
+  .colors{
+    height: 80% ;
+    max-height: 320px ;
+    
+    overflow: auto ;
+  }
+  .title{
+    font-size: 1rem ;
+  }
+  .row{
+    margin: 0 16px ;
+  }
+  .recent{
+    border-top: 1px $clr-white2 solid ;
+  }
+  .color{
+    overflow: hidden ;
+    width: 35px ;
+    height: 35px;
+    border: $clr-black2;
+    margin: 8px ;
+    display: inline-block ;
+  }
+}
