styling color picker

--- a/src/app/color-picker/color-picker.component.html
+++ b/src/app/color-picker/color-picker.component.html
@@ -1,7 +1,10 @@
 <div id="color-picker">
     <div class="modalBg"></div>
     <div class="swatch">
-    <h1>COLOR PICKER</h1>
+<header class="title">
+<h1>COLOR PICKER</h1>
+</header>
+    
     <div class="row colors">
         <div class="color" *ngFor="let c of colors" [style.background]="c" ></div>
     </div>
