--- a/src/styles.scss
+++ b/src/styles.scss
@@ -190,26 +190,97 @@ label{
 
   }
   .colors{
-    height: 80% ;
-    max-height: 320px ;
-    
+    z-index: 7;
+    position: absolute ;
+    top: 80px ;
+    left: 0 ;
+    right:  0;
+    bottom: 66px; 
+    background: #d1d1d1 ;
     overflow: auto ;
+    padding: 0 ;
+    text-align: center;
   }
   .title{
-    font-size: 1rem ;
+    font-size: 1.5rem ;
+    height: 50px ;
+    position: absolute ;
+    top: 0px ;
+    left: 0 ;
+    right:  0 ;
+    
+    background: $clr-white1 ;
+    box-shadow: 1px 0 2px rgba(0, 0, 0, 0.3) ;
+    width: 100% ;
+    height: 80px ;
+    z-index: 9 ;
+    padding-top: 24px;
+    padding-left: 20px ;
+    h1{
+      margin: 0;
+    }
   }
-  .row{
-    margin: 0 16px ;
-  }
+  
   .recent{
-    border-top: 1px $clr-white2 solid ;
+    z-index: 8;
+    box-shadow: -1px 0 3px rgba(0, 0, 0, 0.5) ;
+    position: absolute ;
+    bottom: 0px;
+    width: 100% ;
+    left: 0 ;
+    right:  0;
+    height: 66px ;
+    white-space: nowrap;
+overflow: hidden ;
+overflow-x: auto ;
+    padding: 8px ;
+    background-color: #e5e5e5 ;
+    
+    .color{
+      border-radius: 18px ;
+      word-break: keep-all ;
+      margin: 10px 5px ;
+      width: 25px ;
+      height: 25px;
+      border-width: 1px ;
+    }
   }
   .color{
-    overflow: hidden ;
-    width: 35px ;
-    height: 35px;
-    border: $clr-black2;
-    margin: 8px ;
+    // overflow: hidden ;
+    // width: 30px ;
+    // height: 30px;
+    // border: 2px $clr-white2 solid;
+    // margin: 8px ;
+    border: 4px #d1d1d1 solid ;
     display: inline-block ;
+    float: left ;
+    width: 10% ;
+    height: 10%;
   }
+}
+
+
+/*
+ *  SCROLLBAR
+ */
+
+div::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.2);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+div::-webkit-scrollbar
+{
+  width: 8px;
+  height: 8px;
+	background-color: #F5F5F5;
+}
+
+div::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,.2);
+	background-color: rgb(112, 112, 112);
 }
