--- a/src/app/color-picker/color-picker.component.html
+++ b/src/app/color-picker/color-picker.component.html
@@ -1,21 +1,14 @@
 <div id="color-picker">
-    <div class="modalBg"></div>
-    <div class="swatch">
-<header class="title">
-<h1>COLOR PICKER</h1>
-</header>
-    
+  <div class="modalBg" (click)="onhideColorPicker()"></div>
+  <div class="swatch">
+    <header class="title">
+      <h1>COLOR PICKER</h1>
+    </header>
+
     <div class="row colors">
-        <div class="color" *ngFor="let c of colors" [style.background]="c" ></div>
+      <div class="color" *ngFor="let c of colors" [style.background]="c" (click)="onChooseColor(c)"></div>
     </div>
-    <div class="row recent">
-        <div class="color" style="background : rgb(25, 228, 201)"></div>
-        <div class="color" style="background : rgb(25, 228, 201)"></div>
-        <div class="color" style="background : rgb(25, 228, 201)"></div>
-        <div class="color" style="background : rgb(25, 228, 201)"></div>
-        <div class="color" style="background : rgb(25, 228, 201)"></div>
-    </div>
-    </div>
-    
+  </div>
+
 
 </div>
