--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@ $clr-white2: #d8d8d8;
 *::before {
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
@@ -21,11 +22,11 @@ ul {
   padding: 0;
 }
 
-h1  {
+h1 {
   margin-top: 32px;
   color: $clr-black1;
   display: inline-block;
-  font-size: 2rem ;
+  font-size: 2rem;
   &::after {
     content: " ";
     display: block;
@@ -113,7 +114,7 @@ h1  {
 }
 
 .row {
-clear: both ;
+  clear: both;
   padding: 16px 0px;
   .col {
     float: right;
@@ -121,13 +122,14 @@ clear: both ;
     &.col-half {
       width: 50%;
     }
-    &.col-third{
-        width: 33.33% ;
+    &.col-third {
+      width: 33.33%;
     }
   }
 }
 
-input , select {
+input,
+select {
   width: 100%;
   padding: 4px;
   border: none;
@@ -137,125 +139,89 @@ input , select {
     outline: none;
   }
 }
-label{
-    font-size: .8rem ;
-    font-weight: 700 ;
-    color: $clr-black2 ;
+
+label {
+  font-size: .8rem;
+  font-weight: 700;
+  color: $clr-black2;
 }
-.page-title{
-    color: $clr-black2 ;
-    font-size: 2rem ;
-    border-bottom-width: 3px ;
+
+.page-title {
+  color: $clr-black2;
+  font-size: 2rem;
+  border-bottom-width: 3px;
 }
-.save-button{
-    color: $clr-white1 ;
-    background-color: $clr-blue1;
-    border-radius: 2px ;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.699) ;
-    font-size: .8rem ;
-    font-weight: 700 ;
-    padding: 10px 22px ;
-    float: right ;
-    margin: 16px 0 ;
-    border: 0 ;
+
+.save-button {
+  color: $clr-white1;
+  background-color: $clr-blue1;
+  border-radius: 2px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.699);
+  font-size: .8rem;
+  font-weight: 700;
+  padding: 10px 22px;
+  float: right;
+  margin: 16px 0;
+  border: 0;
 }
 
 #color-picker {
-  .modalBg{
-    position: fixed ;
-    width: 100% ;
+  .modalBg {
+    position: fixed;
+    width: 100%;
     height: 100%;
-    top: 0 ;
-    bottom: 0 ;
-    right: 0 ;
+    top: 0;
+    bottom: 0;
+    right: 0;
     left: 0;
-    background-color: hsla(0, 0%, 0%, 0.85) ;
+    background-color: hsla(0, 0%, 0%, 0.85);
     z-index: 1;
   }
-  .swatch{
+  .swatch {
     z-index: 2;
-    background: $clr-white1 ;
-    padding: 0 20px; 
-    border-radius: 2px ;
-    position: fixed ;
-    top: 0 ;
-    bottom: 0 ;
-    right: 0 ;
+    background: $clr-white1;
+    padding: 0;
+    border-radius: 2px;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
     left: 0;
     width: 90%;
     height: 90%;
     max-width: 400px;
-    max-height: 500px ;
-    margin: auto ;
-
+    max-height: 300px;
+    margin: auto;
   }
-  .colors{
-    z-index: 7;
-    position: absolute ;
-    top: 80px ;
-    left: 0 ;
-    right:  0;
-    bottom: 66px; 
-    background: #d1d1d1 ;
-    overflow: auto ;
-    padding: 0 ;
-    text-align: center;
+  .colors {
+    background: #d1d1d1;
+    overflow: auto;
+    padding: 0;
+    display: block ;
+    height: 100% ;
   }
-  .title{
-    font-size: 1.5rem ;
-    height: 50px ;
-    position: absolute ;
-    top: 0px ;
-    left: 0 ;
-    right:  0 ;
+  .title {
+    font-size: 1.5rem;
+    height: 50px;
     
-    background: $clr-white1 ;
-    box-shadow: 1px 0 2px rgba(0, 0, 0, 0.3) ;
-    width: 100% ;
-    height: 80px ;
-    z-index: 9 ;
+    
+    background: $clr-white1;
+    box-shadow: 1px 0 2px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 80px;
+    z-index: 9;
     padding-top: 24px;
-    padding-left: 20px ;
-    h1{
+    padding-left: 20px;
+    h1 {
       margin: 0;
     }
   }
   
-  .recent{
-    z-index: 8;
-    box-shadow: -1px 0 3px rgba(0, 0, 0, 0.5) ;
-    position: absolute ;
-    bottom: 0px;
-    width: 100% ;
-    left: 0 ;
-    right:  0;
-    height: 66px ;
-    white-space: nowrap;
-overflow: hidden ;
-overflow-x: auto ;
-    padding: 8px ;
-    background-color: #e5e5e5 ;
-    
-    .color{
-      border-radius: 18px ;
-      word-break: keep-all ;
-      margin: 10px 5px ;
-      width: 25px ;
-      height: 25px;
-      border-width: 1px ;
-    }
-  }
-  .color{
-    // overflow: hidden ;
-    // width: 30px ;
-    // height: 30px;
-    // border: 2px $clr-white2 solid;
-    // margin: 8px ;
-    border: 4px #d1d1d1 solid ;
-    display: inline-block ;
-    float: left ;
+  .color {
+    border: 4px #d1d1d1 solid;
+    float: left;
     width: 10% ;
-    height: 10%;
+    height: 35px;
   }
 }
 
@@ -264,23 +230,27 @@ overflow-x: auto ;
  *  SCROLLBAR
  */
 
-div::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.2);
-	border-radius: 10px;
-	background-color: #F5F5F5;
+div::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  background-color: #F5F5F5;
 }
 
-div::-webkit-scrollbar
-{
+div::-webkit-scrollbar {
   width: 8px;
   height: 8px;
-	background-color: #F5F5F5;
+  background-color: #F5F5F5;
 }
 
-div::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,.2);
-	background-color: rgb(112, 112, 112);
+div::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, .2);
+  background-color: rgb(112, 112, 112);
+}
+
+.colorPicker-btn{
+  width: 70px;
+  height: 30px;
+  overflow: hidden ;
+  border: 1px rgb(129, 128, 128) solid ;
 }
