app can delete font now

--- a/src/app/list-font-item/list-font-item.component.html
+++ b/src/app/list-font-item/list-font-item.component.html
@@ -2,8 +2,7 @@
     <h2 class="title">{{font.title}}</h2>
 <p>{{font.fontFamily}}</p>
 <ul class="commands">
-    <li>CSS</li>
     <li routerLink="/font/{{font.title}}" >EDIT</li>
-    <li>DELETE</li>
+    <li (click)="delete()" >DELETE</li>
 </ul>
 </div>
