--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<header class="main-header">
+        <svg *ngIf="title != 'ngFonts'" (click)="back()" class="return" fill="#000000"  viewBox="0 0 24 24"  xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 0h24v24H0z" fill="none"/>
+          <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/>
+      </svg>
+      <span class="title">{{title}}</span>
+    </header>
 <router-outlet></router-outlet>
 
